# tradestation-api-python

./: .env.sample  .gitignore  AGENT-INSTRUCTION.md  CHANGELOG.md  CONTINUOUS-SELF-LEARNING.md  CONTRIBUTING.md  ERROR_HANDLING_ACTION_PLAN.md  LESSENS-LEARNED.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  delete_all_issues.sh  pyproject.toml  pytest.ini  setup.cfg
.cursor/rules/: continuous-learning.mdc  development-workflow.mdc  project-context.mdc  python-coding-standards.mdc  security.mdc  testing.mdc
.github/workflows/: publish-to-pypi.yml  python-package.yml  python-pr-checks.yml
agentic/: AGENT-INSTRUCTION.md  CONTINUOUS-SELF-LEARNING.md  PLANNING.md  ROO.md
docs/: authentication.md  brokerage.md  error_handling.md  market_data.md  order_execution.md  quick_start.md  rate_limiting.md  streaming.md
examples/Brokerage/: get_accounts.py  get_balances.py  get_balances_bod.py  get_historical_orders.py  get_historical_orders_by_order_id.py  get_order_by_id.py  get_orders.py  get_positions.py  stream_orders.py  stream_positions.py
examples/MarketData/: get_bars.py  get_crypto_symbol_names.py  get_crypto_symbol_names_minimal.py  get_option_expirations.py  get_option_risk_reward.py  get_option_spreadtypes.py  get_option_strikes.py  get_quote_snapshots.py  get_symbol_details.py  stream_bars.py  stream_market_depth.py  stream_market_depth_aggregates.py  stream_option_chain.py  stream_option_quotes.py  stream_quotes.py
examples/OrderExecution/: confirm_group_order.py  confirm_order.py  get_activation_triggers.py  get_routes.py  place_and_cancel_group_order.py  place_and_cancel_order.py  place_replace_cancel_order.py
examples/QuickStart/: README.md  error_handling.py  multi_symbol_quotes.py  quick_start.py  stream_quotes.py
plan/: IMPLEMENTATION_GUIDE.md  PLANNING.md
src/: __init__.py
src/client/: __init__.py  http_client.py  tradestation_client.py
src/streaming/: __init__.py  stream_manager.py
src/tradestation/: __init__.py
src/tradestation_api/: __init__.py
src/ts_types/: __init__.py  brokerage.py  config.py  market_data.py  (+1 more)
tests/: __init__.py  test_version.py
(+76 files in other folders)
