[tool.poetry]
name = "tradestation-api-python"
version = "0.1.0"
description = "An unofficial, asynchronous Python client library for the TradeStation API, providing access to market data, brokerage, and order execution services."
authors = ["mxcoppell <mxcoppell@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mxcoppell/tradestation-api-python"
repository = "https://github.com/mxcoppell/tradestation-api-python"
documentation = "https://github.com/mxcoppell/tradestation-api-python/tree/main/docs"
keywords = [
    "tradestation",
    "trading",
    "api",
    "finance",
    "algorithmic trading",
    "algotrading",
    "asyncio",
    "brokerage",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "tradestation", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
urllib3 = "^2.0.7"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
